--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,30 @@
 .main {
-   height: 100%;
-   width: 70%;
+   height: auto;
+   width: 100%;
    margin: 0 auto;
+   display: flex;
+   padding: 0;
+   padding: 0;
+}
+
+nav {
+   width: 30%;
+   display: flex;
+   flex-direction: column;
+   margin: 40px 0 0 0;
+   padding: 0;
+}
+
+.chat {
+   width: 70%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
+   padding: 0;
+}
+
+a {
+   margin: 10px 0 0 0;
    padding: 0;
 }
