--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,9 +5,10 @@
    display: flex;
    padding: 0;
    padding: 0;
+   flex-wrap: wrap;
 }
 
-nav {
+.nav {
    width: 30%;
    display: flex;
    flex-direction: column;
@@ -26,5 +27,31 @@ nav {
 
 a {
    margin: 10px 0 0 0;
+   padding: 0;
+}
+
+header {
+   width: 100%;
+   margin: 0 0 50px 0;
+   padding: 0;
+}
+
+.profile {
+   font-size: 40px;
+   text-decoration: none;
+   margin: 0 0 0 45%;
+   padding: 0;
+}
+
+footer {
+   width: 100%;
+   margin: 40px 0 0 0;
+   padding: 0;
+}
+
+.back {
+   font-size: 50px;
+   text-decoration: none;
+   margin: 0 0 0 48%;
    padding: 0;
 }
