--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -57,3 +57,19 @@ footer {
    margin: 0 0 0 48%;
    padding: 0;
 }
+
+.blinkChats {
+   animation: blink 1s linear infinite;
+   color: red;
+}
+
+@-webkit-keyframes blink {
+   50% { color: rgb(34, 34, 34); }
+   51% { color: rgba(34, 34, 34, 0); }
+   100% { color: rgba(34, 34, 34, 0); }
+ }
+ @keyframes blink {
+   50% { color: rgb(34, 34, 34); }
+   51% { color: rgba(34, 34, 34, 0); }
+   100% { color: rgba(34, 34, 34, 0); }
+ }
